[package]
name = "DataBroker"
version = "0.6.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
regex = "1.12.2"
bytes = "1.10.1"
uuid = { version = "1.23.0", features = ["v4"] }
windows-sys = { version = "0.61.2", features = ["Win32_System_Memory"] }
libc = "1.0.0-alpha.3"
